A11y: fix high contrast color bug

--- a/css/theme-a42.css
+++ b/css/theme-a42.css
@@ -5640,6 +5640,9 @@ figcaption code {
 	color: inherit;
 	
 }
+.high-c #navbar li button, .high-c #navbar li button .icon::before {
+	color: #343643;
+  }
 
 /*.inv-c #navbar li button .icon:before{
 			color:var(--inv-font);
